Added demo project.

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngSliiideToTheLeft",
+  "name": "ngSlideToTheLeft",
   "version": "0.0.0",
   "authors": [
     "jonah katz <jak1192@gmail.com>"
