--- a/bower.json
+++ b/bower.json
@@ -19,5 +19,10 @@
   ],
   "dependencies": {
     "angular": "~1.4.8"
-  }
+  },
+  "main": [
+    "./dist/ng-slide-to-the-left.min.js",
+    "./dist/ng-slide-to-the-left.min.css"
+  ]
+
 }
